menambahkan paragraf index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <h2>Git Remote 2</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Possimus voluptatem velit deserunt rem architecto facilis
+        laudantium voluptatibus, sed atque quo accusamus,
+        voluptate dignissimos suscipit nobis officiis temporibus amet sunt repellendus?
+    </p>
 </body>
 
 </html>
