--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         laudantium voluptatibus, sed atque quo accusamus,
         voluptate dignissimos suscipit nobis officiis temporibus amet sunt repellendus?
     </p>
+    <ul>
+        <li>Satu</li>
+        <li>Dua</li>
+        <li>Tiga</li>
+    </ul>
 </body>
 
 </html>
